--- a/test.css
+++ b/test.css
@@ -721,3 +721,20 @@ input:checked + .slider:before {
 .sidebar:not(.right-sidebar) #recentSearches {
   padding-left: 0;
 }
+@media (max-width: 700px) {
+  .sidebar {
+    position: static !important;
+    margin-top: 0 !important;
+    width: 100vw;
+    z-index: 1;
+  }
+  #mainContentWrapper {
+    margin-top: 0 !important;
+    padding-top: 12px !important;
+    z-index: 2;
+  }
+  header {
+    position: static !important;
+    z-index: 3;
+  }
+}
